// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BinaryPagination should render empty 1`] = `
<div
  className="sc-bdVaJa flWwzy"
>
  <div
    className="sc-bwzfXH kUhibZ"
  />
  <div
    className="sc-htpNat bQTCAo"
  />
</div>
`;

exports[`BinaryPagination should render with data 1`] = `
<div
  className="sc-bdVaJa flWwzy"
>
  <div
    className="sc-bwzfXH kUhibZ"
  >
    <ul
      className="pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          ← 
          Prev title
        </div>
      </li>
    </ul>
  </div>
  <div
    className="sc-htpNat bQTCAo"
  >
    <ul
      className="pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          Next title
           →
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`BinaryPagination should use slug if title not provided 1`] = `
<div
  className="sc-bdVaJa flWwzy"
>
  <div
    className="sc-bwzfXH kUhibZ"
  >
    <ul
      className="pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          ← 
          /prev
        </div>
      </li>
    </ul>
  </div>
  <div
    className="sc-htpNat bQTCAo"
  >
    <ul
      className="pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          /next
           →
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`BinaryPagination shouldn't render without slug 1`] = `
<div
  className="sc-bdVaJa flWwzy"
>
  <div
    className="sc-bwzfXH kUhibZ"
  />
  <div
    className="sc-htpNat bQTCAo"
  />
</div>
`;
